vlib/v/checker/tests/import_middle_err.vv
import time
fn show() {
	println('hello, world')
}
import os
fn main() {
	println(time.now())
}
